--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://battle_ui_control.tscn", "res://MainMenu.tscn"]
 
 [ScriptEditor]
 
-open_scripts=[]
+open_scripts=["res://Let's Fight Button.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
