--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/ozuma/Downloads/Godot_v4.0-stable_win64.exe"
+executable_path="C:/Users/Administrator/Desktop/4paul/godot/godotv4/Godot_v4.0-stable_win64.exe"
 tile_source_sort=0
 
 [debug_options]
@@ -16,7 +16,16 @@ scripts=["res://Let's Fight Button.gd"]
 [dialog_bounds]
 
 search_help=Rect2(2400, 270, 960, 540)
+project_settings=Rect2(510, 190, 900, 700)
 
 [script_setup]
 
 last_selected_language="GDScript"
+
+[color_picker]
+
+recent_presets=PackedColorArray(1, 1, 1, 1)
+
+[project_settings]
+
+advanced_mode=false
