--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://MainMenu.tscn"]
+open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://battlebgmusic.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Let's Fight Button.gd"]
+open_scripts=["res://Let's Fight Button.gd", "res://Quit Button.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
