changed up fonts for menu

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://battlebgmusic.tscn"]
+open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://battlebgmusic.tscn", "res://askPname.tscn"]
 
 [ScriptEditor]
 
