--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://battlebgmusic.
 
 [ScriptEditor]
 
-open_scripts=["res://Entry Box.gd", "res://Let's Fight Button.gd", "res://Quit Button.gd"]
+open_scripts=["res://BattleUI.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://Quit Button.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
