started working on the battle part of the game, most styleistic UI elements are finished.I don't really have any gripes on the way it looks, I'm plainly satisfied.At the moment of writting this,I really don't have much to say but I'll sum it all up in a read me file later.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://battlebgmusic.tscn", "res://askPname.tscn"]
+open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn"]
 
 [ScriptEditor]
 
 open_scripts=["res://BattleUI.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://Quit Button.gd"]
-open_help=[]
+open_help=["TextureRect"]
 script_split_offset=70
 list_split_offset=0
