--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ open_scenes=["res://MainMenu.tscn", "res://BattleUI.tscn", "res://askPname.tscn"
 
 [ScriptEditor]
 
-open_scripts=["res://askPnameStore.gd", "res://BattleUI.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://MonsterHP.gd", "res://PlayerNamePrompt.gd", "res://Pname Prompt.gd", "res://Quit Button.gd", "res://ShapingRect.gd"]
-open_help=["Label", "Panel", "StyleBox", "TextureProgressBar"]
+open_scripts=["res://ActionsPanelShow.gd", "res://askPnameStore.gd", "res://BattleUI.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://MonsterHP.gd", "res://PlayerNamePrompt.gd", "res://Pname Prompt.gd", "res://Quit Button.gd", "res://ShapingRect.gd", "res://ShowPlayerStats.gd"]
+open_help=["Container", "Label", "Panel", "StyleBox", "TextureProgressBar"]
 script_split_offset=70
 list_split_offset=0
 
