changed health bars

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -25,7 +25,7 @@ last_selected_language="GDScript"
 
 [color_picker]
 
-recent_presets=PackedColorArray(1, 0.439216, 0.878431, 1, 1, 0.439216, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0.557222, 0.557222, 1, 0, 0.583924, 0.583924, 1)
+recent_presets=PackedColorArray(0, 0.557222, 0.557222, 1, 0, 0.583924, 0.583924, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0.468327, 1.10099e-06, 1.68458e-07, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0.794399, 3.22476e-06, 9.62615e-07, 1, 1, 1, 1, 1)
 
 [project_settings]
 
