--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/Administrator/Desktop/4paul/godot/godotv4/Godot_v4.0-stable_win64.exe"
+executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 tile_source_sort=0
 use_advanced_connections=false
 
