added skill button functionality
i don't really care for version numbers during this commit, i'll update it later.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,11 +4,11 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=223
+dock_split_2=-72
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=320
-dock_hsplit_3=-489
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -20,7 +20,7 @@ open_scenes=["res://MainMenu.tscn", "res://askPname.tscn", "res://Battle.tscn", 
 
 [ScriptEditor]
 
-open_scripts=["res://ActionsPanelShow.gd", "res://askPnameStore.gd", "res://AttackButton.gd", "res://BaseEnemy.gd", "res://Battle.gd", "res://CloseGame.gd", "res://DefendButton.gd", "res://DRGN Name.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://MenuArrow1.gd", "res://MenuArrow2.gd", "res://MenuArrow3.gd", "res://MonsterHP.gd", "res://PlayerHPLabel.gd", "res://PlayerNamePrompt.gd", "res://PlayerSPLabel.gd", "res://PlayerState.gd", "res://Pname Prompt.gd", "res://Quit Button.gd", "res://ShapingRect.gd", "res://ShowPlayerStats.gd", "res://SkillButton.gd", "res://SystemText.gd"]
+open_scripts=["res://ActionsPanelShow.gd", "res://askPnameStore.gd", "res://AttackButton.gd", "res://BaseEnemy.gd", "res://Battle.gd", "res://CloseGame.gd", "res://DefendButton.gd", "res://DRGN Name.gd", "res://Entry Box.gd", "res://Let's Fight Button.gd", "res://MainMenu.gd", "res://MenuArrow1.gd", "res://MenuArrow2.gd", "res://MenuArrow3.gd", "res://MonsterHP.gd", "res://PlayerHPLabel.gd", "res://PlayerNamePrompt.gd", "res://PlayerSPLabel.gd", "res://PlayerState.gd", "res://Pname Prompt.gd", "res://Quit Button.gd", "res://ShapingRect.gd", "res://ShowPlayerStats.gd", "res://SkillButton.gd", "res://SkillsMenu.gd", "res://SystemText.gd"]
 open_help=["@GlobalScope", "CanvasItem", "Input"]
 script_split_offset=150
 list_split_offset=0
